# allnighter-databases-neurokg

./: .gitattributes  .gitignore  INSTRUCTIONS.md  create_knowledge_graph.py  martinprompt.md  memory.md  progress.md  pyproject.toml  system.md  task.md  todo.md
.claude/agents/: agent-adapter-builder.md  agent-data-downloader.md  agent-schema-designer.md
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
sandbox/: .env.example  Dockerfile  auto-backup.sh  docker-compose.sandbox.yml  extract-work.sh  run-overnight.sh  sandbox-entrypoint.sh  start-sandbox.sh  stop-sandbox.sh  watchdog.sh
sandbox/backups/: auto-backup-20260207_112042.patch  auto-backup-20260207_113543.patch  auto-backup-20260207_115049.patch  auto-backup-20260207_123607.patch  auto-backup-20260207_125114.patch  auto-backup-20260207_130634.patch  auto-backup-20260207_133649.patch  auto-backup-20260207_135156.patch  auto-backup-20260207_140704.patch  auto-backup-20260207_142215.patch  auto-backup-20260207_143724.patch  auto-backup-20260207_172401.patch  auto-backup-20260207_180929.patch  auto-backup-20260207_182439.patch
sandbox/patches/: sandbox_work_20260207_110127.patch  sandbox_work_20260207_192629.patch
scripts/: build.sh  import.sh
template_package/: general.ipynb
template_package/adapters/: abc_atlas_adapter.py  adhesome_adapter.py  allen_brain_adapter.py  allen_connectivity_adapter.py  appris_adapter.py  arrestindb_adapter.py  attract_adapter.py  bgee_adapter.py  biodolphin_adapter.py  biogrid_adapter.py  biolip_adapter.py  brain_rnaseq_adapter.py  (+120 more)
(+1 files in other folders)
